--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+html {
+  box-sizing: border-box;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*, *::before, *::after {
+  box-sizing: inherit;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  margin: 0;
+  font-family: sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  color: #333;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.square {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  height: 48px;
+  width: calc(100% / 4);
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.result-display {
+  padding: 2px 6px;
+  border: 1px solid black;
+  width: 360px;
+  height: 56px;
+  font-size: 24px;
+  display: flex;
+  align-items: flex-end ;
+  justify-content: flex-end;
+  flex-direction: column;
+}
+
+.calculator-wrapper {
+  display: flex;
+  width: 360px;
+  flex-wrap: wrap;
+}
+.toggle-button {
+  border: 1px solid black;
+  background: none;
+}
+.result{
+  display: flex;
+  flex-direction: column;
 }
